# eidash

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Makefile.toml  README.md  compose.prod.yml  compose.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  y.sh
.github/workflows/: audit.yml  deploy_api.yml  deploy_web.yml  test.yml
.sqlx/: query-01acf3ba19d79782323469a8550a204672f195ad93874db0d2a5bdc8080246da.json  query-0bb8995839c2b8d494eece15d06b08ee03b278652d6c34a8e9b7f8edb03596f2.json  query-108b1d9bbb3dcaf71e41e082f9e253fc6eed8d89df1a81cfc6894345d5d8d839.json  query-1475f4106fee114bfc1c828e7ef321232e295df70c71f993a2111e21d13fe5f8.json  query-188372837a5d27214f9f43b388a4aaf691cb382a1dbf2478ca77270058b051bb.json  query-1cf4d4facecf966075c84b54bb51fe04bdaf3aab60366f3348af158eb98b9907.json  query-1d477455fb6056e59587dc6316e5c292e69f143ac067111124ecfec59e1b7d8b.json  query-3d9a3391859023b3b9375057d7134c3da3f3ab8103c89f63c2295545e63ec27e.json  query-3f9aab557998d3e2273ac3786c7adbefad593fd29aca68923b76749d02242863.json  query-571f421cf4ce8cfffc4d83deb18f46484d4ae8144a7a23fa9fc8194262cecaae.json  query-5da57df05e79ede18d920e8b373cc18d0e77ba11576bf0ed87adb7a76e4c3b0c.json  query-65f29113fdf52e5eb1d67cc312f82dfd49971c45360923a6826f3f13f1d4a96e.json  query-70568d663c1a01639b43c586db46d1eefe2c0a4f71f9da916ce162b5ad520956.json  query-849068415231033be1f061bfafe2e82ec8b11619fc427b1ab7c58175300c1222.json  query-9bb2f28969e87b44944f068e65c3752637bb1aa552351342f64cecde98873fe3.json  query-a31192ddf9ad7271ef9f22c8cef356f41d9c7982eacc604c421433da3580810a.json  query-ae6b8719b72aca4e15c192fa08495173d80e15bc02f6dd125f80ae323c510999.json  query-aef6efaee7163546ca3d753bece97669521151f2178ae2cb5aef693d559df6c5.json  query-beee18374980b6dfc5d73711b0e9b5b7ef942370c5149a775e5f0bc5f8cd40c7.json  query-c053a728d41932edff1ed906f33fead1a188216f054aabe62f330f9fe699bf60.json  query-cc620c50ca93addc72d11135909cbbbd1720cf3d29bc1ae580bdd1e93d960545.json  query-d501d971828d39b6010085f94b98093b061051c88dbe4b5efa1f7954aec55199.json  query-d860035e6806651c098c58b4120db9cd9deb12a5b5ff537de82247ee4573cf64.json  query-f1080d511828208939d4b1f0e0fd47125c9e98a6ed5d2196cb7c2bbd30e5396e.json  query-f225ebce06cdbc7b9593060bd6968c2ffe4a9a41218a5019915473146748c8bf.json  query-f9c264d47af007bea55d83efa8ca25b425639a9ff1c537aa9c31424de34534df.json
clickhouse-migrations/: 20240419000315_basic_save_v1.up.sql  fyko.csv
docker/authentik/: dev-dump.sql  dump.sql
docker/clickhouse/: clickhouse-config.xml  clickhouse-user-config.xml
docker/postgres/: seed.sql
docker/timescale/migrations/: init.sql
ei-proto/: Cargo.toml  build.rs
ei-proto/proto/: ei.proto
ei-proto/src/: lib.rs
eidash/: Cargo.toml  Dockerfile
eidash-id/: Cargo.toml  Dockerfile
eidash-id/src/: lib.rs  markers.rs
eidash-web/: Dockerfile  middleware.ts  next.config.js  package.json  pnpm-lock.yaml
eidash-web/actions/: user.ts
eidash-web/app/: layout.tsx  page.tsx  providers.tsx
eidash-web/app/users/[id]/: page.tsx
eidash-web/components/: AccountSelecter.tsx  AccountVisibilityButton.tsx  Chart.tsx  Charts.tsx  CopyUserProfileURLButton.tsx  EarningsBonusChart.tsx  LastUpdated.tsx  ProfileVisibilityButton.tsx  ProphecyEggsChart.tsx  SetEIDForm.tsx  SetupAccount.tsx  SoulEggsChart.tsx
eidash-web/components/charts/: Chart.tsx  ChartSkeleton.tsx  ClothedEarningsBonusChart.tsx  EarningsBonusChart.tsx  JerChart.tsx  MerChart.tsx  ProphecyEggsChart.tsx  SoulEggsChart.tsx
eidash-web/hooks/: useAccountId.tsx  useAuth.tsx  useSaves.tsx
eidash-web/lib/: math.ts  storage.ts  theme.ts  types.ts  units.ts
eidash/src/: auth.rs  clickhouse.rs  config.rs  db.rs  ei.rs  error.rs  jobs.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs
eidash/src/auth/: error.rs
eidash/src/db/: account.rs  basic_save_v1.rs  types.rs  user.rs
eidash/src/db/types/: timestamptz.rs
eidash/src/ei/: calculate_clothed.rs  collect_backup.rs
eidash/src/middleware/: request_id.rs
eidash/src/models/: api_account.rs  api_user.rs
eidash/src/routes/: accounts.rs  oidc.rs  saves.rs  status.rs  users.rs  ws.rs
migrations/: 20231210031556_init.down.sql  20231210031556_init.up.sql  20231210031650_user.down.sql  20231210031650_user.up.sql  20240426224249_user-profile-visibility.down.sql  20240426224249_user-profile-visibility.up.sql  20240616212944_basic_save_v1.down.sql  20240616212944_basic_save_v1.up.sql  20240707171209_basic_save_v1_clothed_earnings_bonus.down.sql  20240707171209_basic_save_v1_clothed_earnings_bonus.up.sql  20240712183753_basic_saved_v1_prestige_count.down.sql  20240712183753_basic_saved_v1_prestige_count.up.sql  20240718020240_alt_accounts.up.sql
scripts/: migrate-alt-accounts.py
