[package]
name = "eidash-id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros = "0.25.3"
svix-ksuid = { version = "0.7.0", features = ["serde"] }
sqlx.workspace = true
serde.workspace = true
regex = "1.10.2"
once_cell.workspace = true
