[package]
edition = "2021"
name = "eidash"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
axum = { version = "0.7.5", features = ["tracing", "macros", "http2", "ws"] }
axum-core = "0.4.1"
axum-login = "0.15.3"
bigdecimal = { version = "0.4.5", features = ["serde"] }
clokwerk = "0.4"
dotenvy = "0.15.7"
ei-proto.workspace = true
eidash-id.workspace = true
envy = "0.4"
futures-util = "0.3.29"
http = "1.0.0"
hyper = { version = "1.0.1", features = ["server"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
num-bigint = { version = "0.4.5", features = ["serde"] }
oauth2 = "4.4.2"
once_cell.workspace = true
openidconnect = "3.4.0"
pika = "0.1.3"
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11", features = [
  "multipart",
  "rustls-tls-webpki-roots",
] }
rustflake = "0.1.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx.workspace = true
svix-ksuid = { version = "0.8.0", features = ["serde"] }
thiserror = "1.0.50"
time = "0.3.30"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-util",
  "fs",
  "sync",
  "signal",
] }
tower = { version = "0.4.13", features = ["tracing", "timeout"] }
tower-http = { version = "0.5.0", features = [
  "tracing",
  "trace",
  "request-id",
  "compression-full",
  "cors",
] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
tower-sessions = "0.12.2"
tower-sessions-moka-store = "0.13.0"
tower-sessions-redis-store = { version = "0.13.0", features = [
  "enable-rustls",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "env-filter",
  "json",
] }
ulid = "1.1.0"
uuid = { version = "1.5.0", features = ["v1", "v4", "fast-rng", "serde"] }
